--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/encryption/page_create_keystore.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/encryption/page_create_keystore.textile
@@ -1,1 +1,5 @@
-= Create a new Keystore and Key =
+= Create a new Key and a new Keystore =
+
+'''Create a new Key and a new Keystore''' is one of the alternatives as the second wizard page.
+
+[[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/encryption/page_2c.png‎|Create a new Key and a new Keystore|center]]
