Extended user guide

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/encryption/page_create_keystore.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/encryption/page_create_keystore.textile
@@ -1,5 +1,7 @@
 = Create a new Key and a new Keystore =
 
-'''Create a new Key and a new Keystore''' is one of the alternatives as the second wizard page.
+'''Create a new Key and a new Keystore''' is one of the alternatives as the second wizard page. This page lets you create a new keystore together with a new key. Enter the name for the keystore and the password to protect it. After that choose an algorithm and its size and enter an alias name together with a password for the key. The keystore password is used to protect the whole keystore, the key password to protect the key. Both passwords are required.
+
+Click the '''Generate''' button when you are done to create the new keystore together with the key. A short message informs you about the generation result and the '''Next''' button will be enabled. The keystore is stored with the entered name in the active folder (normally the active project). The key generated here will be used in the active encryption process.
 
 [[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/encryption/page_2c.png‎|Create a new Key and a new Keystore|center]]
