--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/encryption/page_algorithms.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/encryption/page_algorithms.textile
@@ -1,1 +1,21 @@
 = Algorithms and Encryption Properties =
+
+This is the last page of the XML Encryption Wizard. You must select the Encryption and the Key Wrap Algorithms. Optional, you can select to keep the root element as plain text and you can enter an encryption ID (strongly recommended). The '''Start Signature Wizard afterwards''' checkbox enables you to start the signature wizard after successfully encrypting the selected XML document.
+
+[[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/encryption/page_3.png‎|Algorithms and Encryption Properties|center]]
+
+'''Encryption and Key Wrap Algorithm'''
+
+Choose the algorithms you want to use to encrypt the XML document (fragment) and to wrap the key. You have to select algorithms that do match with the selected key on the previous wizard page.
+
+'''Properties'''
+
+There is only one property available: Keep root element as plain text. This creates an encrypted XML document (fragment) with a root element in plain text. In case you selected to encrypt the whole document the documents root element will be kept as plain text. In case you selected to encrypt a document fragment only (via a text selection or an XPath expression) this will result in a plain text root element of this document fragment.
+
+'''Encryption ID'''
+
+The encryption ID is optional, but it is strongly required to enter one. This ID must be unique in the whole document and may not contain <, >, &, ' or " characters. Without an encryption ID it is only possible to decrypt the XML document step by step.
+
+'''Signature Wizard'''
+
+Select the checkbox in case you want to start the [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/sign.html | XML Signature Wizard]] directly after the encryption process was successfully finished.
