bug 252628, bug 251488: - Actions converted to command handlers - Document and context menu contributed via "org.eclipse.ui.menus" (see bug 251488) - Enablement/visibility declaratively managed by "org.eclipse.ui.services" - Naming and placing of menu items aligned with Eclipse UI convention (e.g. in contrast to documents/files which are created with 'New...' and deleted with 'Delete' smaller parts are "Add"ed and "Remove"d; Document and context menu rearranged) - Refactoring to avoid duplicated code (e.g. by introducing some abstract handlers)

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
@@ -2,46 +2,12 @@
 # Language-specific strings in the vex-editor plugin
 #
 
+command.removeTag.dynamicName= Remove ''{0}'' Tag
+command.removeTag.inRemoveMenu.dynamicName= ''{0}'' &Tag
+command.convertElement.dynamicName= &Convert ''{0}'' To...
 
-#
-# Actions
-#
-# NOTE: THESE MUST BE KEPT IN SYNC WITH THE SAME BLOCK IN plugin.properties
-#
-# Note: when there are multiple labels for an action, the one named
-# Xxx.label is the command listed in the key bindings preference page.
-#
-ChangeElementAction.label=Change Element
-ChangeElementAction.dynamic.label=&Change <{0}> to...
-ChangeElementAction.menu.label=&Change Element...
-DeleteColumnAction.label=Delete Column
-DebugView.noActiveEditor=No Vex editor is currently active.
-DeleteRowAction.label=Delete Row
-DuplicateSelectionAction.label=&Duplicate Selection
-InsertColumnAfterAction.label=Insert Column After
-InsertColumnBeforeAction.label=Insert Column Before
-InsertElementAction.label=Insert Element
-InsertAssistant.title=Insert Element
-InsertElementAction.contextmenu.label=Insert Element...
-InsertElementAction.mainmenu.label=&Element...
-InsertRowAboveAction.label=Insert Row Above
-InsertRowBelowAction.label=Insert Row Below
-MoveColumnLeftAction.label=Move Column Left
-MoveColumnRightAction.label=Move Column Right
-MoveRowDownAction.label=Move Row Down
-MoveRowUpAction.label=Move Row Up
-NextTableCellAction.label=Next Table Cell
-PasteTextAction.label=Paste Text
-PreviousTableCellAction.label=Previous Table Cell
-RemoveElementAction.label=Remove Element
-RemoveElementAction.dynamic.label=Remove <{0}>
-RestoreLastSelectionAction.label=Restore Last Selection
-SplitAction.label=Split Block Element
-SplitItemAction.label=Split Item
-
-#
-# End of Actions
-#
+dialog.addElement.title= Add Element
+dialog.convertElement.dynamicTitle= Convert ''{0}''
 
 DebugView.noActiveEditor=No Vex editor is currently active.
 
