--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin_fr.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin_fr.properties
@@ -2,7 +2,7 @@
 # Language-specific strings in plugin.xml
 #
 
-plugin.name=Editeur XML Vex
+pluginName= Editeur XML Vex
 
 BuildProblemDecorator.name=Problème avec le décorateur du Plug-in Vex
 ConfigurationView.name=Configuration de Vex
@@ -25,49 +25,3 @@ VexViewCategory.name=Vex
 
 extensionPoint.doctypes=Document Types Vex
 extensionPoint.styles=Styles Vex
-
-documentActions.label=Actions d'édition de Vex
-
-documentMenu.label=&Document
-insertMenu.label=&Insérer
-tableMenu.label=&Table
-
-
-#
-# Actions
-#
-# NOTE: THESE MUST BE KEPT IN SYNC WITH THE SAME BLOCK IN 
-#       src/net/sf/vex/editor/messages.properties
-#
-# Note: when there are multiple labels for an action, the one named
-# Xxx.label is the command listed in the key bindings preference page.
-#
-ChangeElementAction.label=Changer Element
-ChangeElementAction.dynamic.label=&Changer <{0}> en...
-ChangeElementAction.menu.label=&Changer Element...
-DeleteColumnAction.label=Détruire la colonne
-DeleteRowAction.label=Détruire la ligne
-DuplicateSelectionAction.label=&Dupliquer la selection
-InsertColumnAfterAction.label=Insérer une colonne après
-InsertColumnBeforeAction.label=Insérer une colonne avant
-InsertElementAction.label=Insérer un élement
-InsertElementAction.contextmenu.label=Insérer un élément...
-InsertElementAction.mainmenu.label=&Element...
-InsertRowAboveAction.label=Insérer ligne au dessus
-InsertRowBelowAction.label=Insérer ligne en dessous
-MoveColumnLeftAction.label=Déplacer une colonne à gauche
-MoveColumnRightAction.label=Déplacer une colonne à droite
-MoveRowDownAction.label=Déplacer la ligne vers le bas
-MoveRowUpAction.label=Déplacer la ligne vers le haut
-NextTableCellAction.label=Prochaine Cellule de la table
-PasteTextAction.label=Coller le texte
-PreviousTableCellAction.label=Cellule précédente de la table
-RemoveElementAction.label=Supprimer l'élement
-RemoveElementAction.dynamic.label=Supprimer <{0}>
-RestoreLastSelectionAction.label=Restaurer la dernière selection
-SplitAction.label=Couper le bloc
-SplitItemAction.label=Couper l'item
-
-#
-# End of Actions
-#
