--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/canonicalization/canonicalize.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/canonicalization/canonicalize.textile
@@ -1,5 +1,5 @@
 = XML Canonicalization =
 
-XML Canonicalization does not open any wizard. Instead, it directly canonicalizes (normalizes) the selected XML document (always the complete document). Dependending on the selected menu entry it either maintains the comments or removes them. Removed comments are replaced by an empty line. The '''XML Security''' preferences allow you to switch between ''inclusive'' and ''exclusive'' XML canonicalization, which may result into different canonicalized versions of the XML document (the differences depend on the XML document).
+XML Canonicalization does not open any wizard. Instead, it directly canonicalizes (normalizes) the selected XML document (always the complete document). Dependending on the selected menu entry it either maintains the comments or removes them. Removed comments are replaced by an empty line. The '''XML Security''' [[help/topic/org.eclipse.wst.xml.security.doc/html/preferences/general.html | preferences]] allow you to switch between ''inclusive'' and ''exclusive'' XML canonicalization, which may result into different canonicalized versions of the XML document (the differences depend on the XML document).
 
 '''XML Canonicalization''' always takes place when signing an XML document or verifying an XML Signature. There is no need to execute this task manually.
