--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/verification/verify.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/verification/verify.textile
@@ -10,4 +10,4 @@ The signature properties are accessible via the toolbar icon or by double clicki
 
 == Unknown Signatures ==
 
-Sometimes verification of a signature fails.This may happen when required XML elements or attributes are missing or the XML document is itself invalid. For security reasons, you should regard an unknown signature status as an invalid signature.
+Sometimes verification of a signature fails.This may happen when required XML elements or attributes are missing or the XML document is itself invalid. For security reasons, you should regard an unknown signature status as an invalid signature. Depending on the missing parts it may even be possible that the signature details dialog (''Properties'') cannot be opened because too much required information is missing.
