--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_keys.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_keys.textile
@@ -1,1 +1,3 @@
 = Keystores and Keys =
+
+The second page of the '''XML Signature Wizard''' depends on your '''Keystore and Key''' selection on the first wizard page. You can select to [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_open_key.html | Use a Key from an existing Keystore]], [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_create_key.html | Insert a new Key in an existing Keystore]] or to [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_create_keystore.html | Create a new Key and a new Keystore]].
