Updated online help

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_resource.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_resource.textile
@@ -1,1 +1,21 @@
 = Resource and Signature Type =
+
+This is the first page of the XML Signature Wizard. You'll have to select the resource you want to sign, the signature type, the keystore/ key option and the Basic Security Profile option.
+
+[[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/sign/page_1.png‎|Resource and Signature Type|center]]
+
+'''Resource'''
+
+It is possible to sign the complete document, the selected text or a document fragment specified by an XPath expression. The complete document is always possible. For a text selection this selection has to exist before launching the wizard and it has to be well-formed. XPath is always possible too. You can either enter an XPath expression in the textfield or you can select one in the dialog after clicking on the '''Browse...''' button. The XPath expression has to return exactly one element or element content. Signing attributes is not supported.
+
+'''Signature Type'''
+
+The normal signature type is a so called enveloping signature, where the signed data
+
+'''Keystore and Key'''
+
+The chosen option here sets the following wizard page. You can either select to [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_open_key.html | Use a key from an existing keystore]], to [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_create_key.html | Insert a new key in an existing keystore]] or to [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_create_keystore.html | Create a new key and a new keystore]].
+
+'''Basic Security Profile'''
+
+A Basic Security Profile compliant XML Signature has some restrictions in comparison to a regular XML Signature. By activating this checkbox all options in the XML Signature Wizard will be limited to options that are compliant to this profile. In case of the XML Signature Wizard this only limits the available algorithms on the [[help/topic/org.eclipse.wst.xml.security.doc/html/signature/page_algorithms.html | Algorithms and Signature Properties]] page.
