--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_algorithms.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_algorithms.textile
@@ -1,1 +1,25 @@
 = Algorithms and Signature Properties =
+
+This is the last page of the XML Signature Wizard. You must select algorithms for the message digest and the signature as well as  a canonicalization and  transformation algorithm. Optional, you can define some signature properties and you can enter a signature ID (strongly recommended). The '''Start Encryption Wizard afterwards''' checkbox enables you to start the encryption wizard after successfully signing the selected XML document.
+
+[[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/sign/page_3.png‎|Algorithms and Signature Properties|center]]
+
+'''Canonicalization and Transformation Algorithm'''
+
+Choose the algorithms you want to use for canonicalization and transformation. Whereas canonicalization is required, the transformation algorithm can be set to ''none''.
+
+'''Message Digest and Signature Algorithm'''
+
+Choose the algorithms you want to use for the message digest and for the signature itself. Both algorithms are required and must be compatible with the  selected key on the previous wizard page.
+
+'''Properties'''
+
+There is only one property available: Keep root element as plain text. This creates an encrypted XML document (fragment) with a root element in plain text. In case you selected to encrypt the whole document the documents root element will be kept as plain text. In case you selected to encrypt a document fragment only (via a text selection or an XPath expression) this will result in a plain text root element of this document fragment.
+
+'''Signature ID'''
+
+The signature ID is optional, but it is strongly required to enter one. This ID must be unique in the whole document and may not contain <, >, &, ' or " characters. Without a signature ID it might get difficult to verify multiple signatures in one document and it is impossible to use '''Quick Verification'''.
+
+'''Encryption Wizard'''
+
+Select the checkbox in case you want to start the [[help/topic/org.eclipse.wst.xml.security.doc/html/encryption/encrypt.html | XML Encryption Wizard]] directly after the signature process was successfully finished.
