--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_resource.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/signature/page_resource.textile
@@ -10,7 +10,9 @@ It is possible to sign the complete document, the selected text or a document fr
 
 '''Signature Type'''
 
-The normal signature type is a so called enveloping signature, where the signed data
+There are three different signature types available. The difference between them is the position of the signed data and the signature itself.An ''enveloped'' and an ''enveloping'' signature are relatively equal. Both types to store the signed data (and possibly some unsigned data as well) together with the signature in the same XML document. With the '''XML Security Tools''' the signature will be placed in the XML document you have chosen to sign.So, the difference between an enveloped and an enveloping signature is, that with an enveloping signature the signed content is moved inside the XML signature element (into an ''object'' element). With an enveloped signature, the signature is a child element of the signed data. A detached signature may be something completely different. The normal detached signature consists of two documents: one containing the signature and one containing the signed data. To make it more complicated you can create a detached signature within one document too (but not with the '''XML Security Tools'''). With the XML Signature Wizard you do have to select a file to sign when selecting to create a detached signature.
+
+Confused about all the possibilities? Well, there are quite some, and the differences are not often that clear. Simply give it a try and sign your XML documents with the different signature types.
 
 '''Keystore and Key'''
 
