bug 297675: content assist/convert element dialog: - show as list (instead of as a tree) with icons - filtering: 'contains' instead of 'start with' - highlight matching text (in bold)

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
@@ -5,9 +5,7 @@
 command.removeTag.dynamicName= Remove ''{0}'' Tag
 command.removeTag.inRemoveMenu.dynamicName= ''{0}'' &Tag
 command.convertElement.dynamicName= &Convert ''{0}'' To...
-
-dialog.addElement.title= Add Element
-dialog.convertElement.dynamicTitle= Convert ''{0}''
+command.convertElement.dynamicCommandName= Convert ''{0}'' to ''{1}''
 
 DebugView.noActiveEditor=No Vex editor is currently active.
 
