bug 283976: applied patch that fixes the URL to point to the WTP incubator bugzilla page

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
@@ -1,3 +1,14 @@
+###############################################################################
+# Copyright (c) 2004, 2010 John Krasnay and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     John Krasnay - initial API and implementation
+#     Igor Jacy Lino Campista - bug 283976 - changed URL in error to WTP incubator bugzilla
+###############################################################################
 #
 # Language-specific strings in the vex-editor plugin
 #
@@ -43,12 +54,12 @@ VexActionDelegate.errorLoadingAction=Error loading action {0}: {1}
 
 VexEditor.errorSaving.title=Error
 VexEditor.errorSaving.message=Error saving {0}: {1}
-VexEditor.unknownInputClass=Unable to open inputs of type {0}. Please log a bug report at http://krasnay.ca/bugzilla.
+VexEditor.unknownInputClass=Unable to open inputs of type {0}. Please report a bug to the component 'wtp.inc.vex' at https://bugs.eclipse.org/bugs/enter_bug.cgi?product=WTP%20Incubator
 VexEditor.noDoctype=Cannot determine a document type from the selected document.
 VexEditor.unknownDoctype=No registered document types for public ID {0}.
 VexEditor.noStyles=No registered styles for documents with public ID {0}.
 VexEditor.parseError=Error at line {0} of file {1}: {2}
-VexEditor.unexpectedError=Unexpected error opening {0}. Please log a bug report at http://krasnay.ca/bugzilla.
+VexEditor.unexpectedError=Unexpected error opening {0}. Please report a bug to the component 'wtp.inc.vex' at https://bugs.eclipse.org/bugs/enter_bug.cgi?product=WTP%20Incubator
 VexEditor.loading=Loading...
 VexEditor.errorSavingStylePreference=Error saving style preference
 VexEditor.docChanged.title=Document Changed
