--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages_fr.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages_fr.properties
@@ -1,3 +1,14 @@
+###############################################################################
+# Copyright (c) 2004, 2010 John Krasnay and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     John Krasnay - initial API and implementation
+#     Igor Jacy Lino Campista - bug 283976 - changed URL in error to WTP incubator bugzilla
+###############################################################################
 #
 # Language-specific strings in the vex-editor plugin
 #
@@ -39,12 +50,12 @@ VexActionDelegate.errorLoadingAction=Erreur sur l'action de chargement {0}: {1}
 
 VexEditor.errorSaving.title=Erreur
 VexEditor.errorSaving.message=Erreur de sauvegarde {0}: {1}
-VexEditor.unknownInputClass=Impssible d'ouvrir les entrées de type {0}. Envoyer un rapport de bogue à http://krasnay.ca/bugzilla SVP.
+VexEditor.unknownInputClass=Impossible d'ouvrir les entrées de type {0}. Envoyer un rapport de bogue à la composant 'wtp.inc.vex' à https://bugs.eclipse.org/bugs/enter_bug.cgi?product=WTP%20Incubator
 VexEditor.noDoctype=Impossible de déterminer le type de document pour le document sélectionné.
 VexEditor.unknownDoctype=Pas de type de document enregistré pour la clé publique : {0}.
 VexEditor.noStyles=Pas de style enregistré pour la clé publique : {0}.
 VexEditor.parseError=Erreur à la ligne {0} du fichier {1}: {2}
-VexEditor.unexpectedError=Erreur inconnue à l'ouverture de {0}.  Envoyer un rapport de bogue à http://krasnay.ca/bugzilla SVP.
+VexEditor.unexpectedError=Erreur inconnue à l'ouverture de {0}.  Envoyer un rapport de bogue à la composant 'wtp.inc.vex' à https://bugs.eclipse.org/bugs/enter_bug.cgi?product=WTP%20Incubator
 VexEditor.loading=En chargement...
 VexEditor.errorSavingStylePreference=Erreur à la sauvegarde des préférence de style
 VexEditor.docChanged.title=Document modifié
