--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/decryption/page_resource.textile
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/wiki/decryption/page_resource.textile
@@ -1,15 +1,9 @@
-= Resource and Key Information =
+= Resource =
 
-This is the first and only page of the XML Decryption Wizard. You'll have to provide the keystore and key information used to encrypt the XML document (-fragment) and to choose the encryption you want to decrypt.
+This is the first page of the XML Decryption Wizard. You'll have to choose the encryption you want to decrypt.
 
-[[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/decrypt/page_1.png‎|Resource and Key Information|center]]
-
-'''Keystore and Key'''
-
-Simply choose the keystore containing the used key and enter the keystore password. Type in the key name and its password.
+[[Image:PLUGINS_ROOT/org.eclipse.wst.xml.security.doc/html/images/decrypt/page_1.png‎|Resource and decryption type|center]]
 
 '''Encryption ID'''
 
 An XML document can contain multiple encryptions with different encryption IDs. You do not have to decrypt them in document order. Instead, you can choose which one you want to decrypt (make sure to provide the corresponding keystore and key information, otherwise decryption will fail). However, this requires an ID for the XML encryption. Since IDs are optional you can choose to decrypt the first encrypted part in the XML document instead. In case the XML document contains multiple encryptions without IDs you'll have to decrypt them step by step. In order to avoid that always provide encryption IDs when encrypting XML data.
-
-The wizard automatically stores the entered data for the keystore name and the key name between sessions. Passwords are never stored and have to be entered every time.
