[324927] Do not serialize the configuration provided by a Vex Plug-in Project within the workspace.
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/config/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/config/messages.properties
@@ -40,6 +40,6 @@ PluginProjectBuilder.cantSaveFile=Unable to save {0}.
 PluginProjectBuilder.missingFile=Missing {0}.
 PluginProjectBuilder.parseError=Error parsing {0}.
 PluginProjectBuilder.cantSaveConfig=Unable to save VexConfiguration for project {0}.
-PluginProject.loadingError=Error loading {0}. Rebuilding from scratch.
+PluginProject.loadingError=Error loading {0}.
 PluginProject.buildError=Error building project {0}.
 StylePropertyPage.writeError=Error writing {0}.
