bug 334866: handle the loading of a totally empty XML file
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
@@ -71,3 +71,4 @@ VexEditor.docDeleted.message=The file {0} has been deleted from the workspace. W
 VexEditor.docDeleted.discard=Discard
 VexEditor.docDeleted.save=Save
 VexEditor.noUrlForDoctype=No URL defined for doctype {0}
+VexEditor.noContent=The file ''{0}'' contains no XML content.
