bug 342628: Avoid acronym "Vex"; in "New.." wizards add the keyword "Vex"

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages.properties
@@ -18,7 +18,7 @@ command.removeTag.inRemoveMenu.dynamicName= ''{0}'' &Tag
 command.convertElement.dynamicName= &Convert ''{0}'' To...
 command.convertElement.dynamicCommandName= Convert ''{0}'' to ''{1}''
 
-DebugView.noActiveEditor=No Vex editor is currently active.
+DebugView.noActiveEditor=No Visual XML Editor is currently active.
 
 DocumentFileCreationPage.title=File
 DocumentFileCreationPage.desc=Enter a file name for the new document.
@@ -31,9 +31,9 @@ Messages.cantFindResource=Can''t find resource string {0}
 
 DocumentTypeSelectionDialog.ok=OK
 DocumentTypeSelectionDialog.cancel=Cancel
-DocumentTypeSelectionDialog.unknownDoctype=Vex does not recognize the document type ''{0}''. To open the document with a different document type, select one of the registered document types below.
+DocumentTypeSelectionDialog.unknownDoctype=Unknown document type: ''{0}''. To open the document with a different document type, select one of the registered document types below:
 DocumentTypeSelectionDialog.selectDoctype=Select Document Type
-DocumentTypeSelectionDialog.noDoctype=Vex cannot determine a document type from the selected document. Please select a document type from the following list.
+DocumentTypeSelectionDialog.noDoctype=The document does not contain a document type specification. Please select a document type from the list below:
 DocumentTypeSelectionDialog.alwaysUse=Always use this document type for the selected document.
 
 DocumentTypeSelectionPage.title=Document Type
@@ -44,7 +44,7 @@ DocumentTypeSelectionPage.rootElement=Root Element:
 
 ElementPropertySource.multiple=(multiple)
 
-NewDocumentWizard.title=New Vex Document
+NewDocumentWizard.title=New Document
 NewDocumentWizard.noStyles.title=Error
 NewDocumentWizard.noStyles.message=No styles for the given document type.
 NewDocumentWizard.errorLoading.message=Error loading {0}: {1}
