--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages_fr.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/editor/messages_fr.properties
@@ -26,9 +26,7 @@ Messages.cantFindResource=Ne peut pas trouver la chaine de la ressource {0}
 
 DocumentTypeSelectionDialog.ok=Accepter
 DocumentTypeSelectionDialog.cancel=Abandonner
-DocumentTypeSelectionDialog.unknownDoctype=Vex ne connait pas le type de document '{0}'. Pour ouvrir le document avec un autre type de document, sélectionner un des types enregistrés ci-dessous.
 DocumentTypeSelectionDialog.selectDoctype=Sélectionner un type de document
-DocumentTypeSelectionDialog.noDoctype=Vex ne peut pas déterminer le type de document pour le document sélectionné. Sélectionner un des types de document dans la liste suivante.
 DocumentTypeSelectionDialog.alwaysUse=Toujours utiliser ce type de document pour le document sélectionné.
 Always use this document type for the selected document.
 
@@ -40,7 +38,7 @@ DocumentTypeSelectionPage.rootElement=Elément racine:
 
 ElementPropertySource.multiple=(multiple)
 
-NewDocumentWizard.title=Nouveau Document Vex
+NewDocumentWizard.title=Nouveau Document
 NewDocumentWizard.noStyles.title=Erreur
 NewDocumentWizard.noStyles.message=Pas de styles pour le type de document donné
 NewDocumentWizard.errorLoading.message=Erreur de chargement {0}: {1}
