--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/config/messages.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/src/org/eclipse/wst/xml/vex/ui/internal/config/messages.properties
@@ -4,7 +4,7 @@
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
 # * http://www.eclipse.org/legal/epl-v10.html
-# * 
+# *
 # * Contributors:
 # *     John Krasnay - initial API and implementation
 # *******************************************************************************
@@ -12,26 +12,26 @@
 Messages.cantFindResource=Can''t find resource string {0}
 
 StyleFactory.pluralName=Styles
-StylePropertyPage.loading=The Configuration is being loaded ... 
+StylePropertyPage.loading=The Configuration is being loaded ...
 StylePropertyPage.name=Name:
 StylePropertyPage.doctypes=Document Types:
 ConfigLoaderJob.loadingConfig=Loading Vex configuration
-ConfigLoaderJob.loading=Loading 
+ConfigLoaderJob.loading=Loading
 ConfigPlugin.loadError=Unable to load {0} from project {1}
 ConfigLoaderJob.loadingError=Error loading {0}. Rebuilding from scratch.
-ConfigSource.errorParsingUri=Error parsing 
+ConfigSource.errorParsingUri=Error parsing
 ConfigLoaderJob.cacheError=Unable to cache configuration in {0}
 ConfigurationView.loading=Loading...
 ConfigLoaderJob.loadingProject=Loading project {0}
 ConfigLoaderJob.natureError=Error determining nature of project {0}
 DoctypeFactory.pluralName=Document Types
 DoctypePropertyPage.errorWritingConfig=Error writing {0}
-DoctypePropertyPage.loading=The Configuration is being loaded ... 
+DoctypePropertyPage.loading=The Configuration is being loaded ...
 DoctypePropertyPage.name=Name:
 DoctypePropertyPage.publicId=Public ID:
 DoctypePropertyPage.systemId=System ID:
 DoctypePropertyPage.rootElements=Root Elements:
-NewPluginProjectWizard.title=New Vex Plug-in Project
+NewPluginProjectWizard.title=New Visual XML Plug-in Project
 NewPluginProjectWizard.createError=Error creating plug-in project
 PluginProject.malformedUrl=Project base URL is malformed.
 PluginProject.notPluginProject=Project {0}  is not a Vex plugin project.
